updated header color

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ ul li:hover {
 
 /* Style the header */
 .header {
-  background-color: #f44336;
+  background-color: #417d7a;
   padding: 30px 40px;
   color: white;
   text-align: center;
